crates/slpy-eval/tests/snapshots/golden_grids__hard-cut_80x24_ascii-fine.snap
---
source: crates/slpy-eval/tests/golden_grids.rs
expression: s
---
hard-cut frame 40
term: 80x24  viewport: 80x23  pads: L0 R0 T0 B1
palette: ascii-fine  fg: chroma
+--------------------------------------------------------------------------------+
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|@@@@@888888000000GGGGGCCCCCCLLLLLLffffftttttt11111iiiiii;;;;;;:::::,,,,,,.....  |
|                                                                                |
+--------------------------------------------------------------------------------+
fg-fnv64 per row:
  0 5df78056c43d9ac8
  1 2c9275434689907c
  2 9b11f09bb1d69998
  3 90471e02418f3abc
  4 881948107cfdcfd4
  5 30185b29b3671ec8
  6 173f511777c2ba30
  7 febd9cb2873c8dc8
  8 f044c9bcba3bd55c
  9 9bcad8926e2815b0
 10 9fec4de59bb4f348
 11 260a931f5f3d6f3c
 12 17f9b7bb6083e098
 13 40ae74ec250365b0
 14 8f94d1c38105cf14
 15 4966db78274a19c8
 16 0cdff3c41594365c
 17 a88f49ef7d6ec0e4
 18 d0b5d5a47f7b60d0
 19 32a6e070b0170dd8
 20 6b8ab961a993ec48
 21 1485d0e7143b9d7c
 22 794af868cdd474d8
 23 223995d44c4552f5
